[package]
name = "ic-history-common"
version = "0.1.0"
edition = "2018"
authors = ["Parsa Ghadimi <parsa@fleek.co>"]

[dependencies]
ic-certified-map = "0.1.0"
ic-kit = "0.4.2"
ic-cdk = "0.3.1"
sha2 = "0.9"
serde = "1.0.116"
serde_cbor = "0.11.2"
serde_bytes = "0.11.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }
