[package]
name = "cap-sdk"
version = "1.0.0-alpha1"
edition = "2018"

# license = "IDK"
description = "An SDK for implementing Cap support within your IC canister."
homepage = "https://github.com/Psychedelic/cap"
repository = "https://github.com/Psychedelic/cap"
readme = "https://github.com/Psychedelic/cap/README.md"
documentation = "https://crates.io/cap_standards"

[dependencies]
cap-sdk-core = { path = "core" }
ic-kit = "0.4"
futures = "0.3"
thiserror = "1"