[package]
name = "cap_bucket"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cap-common = { path= "../../common", version = "0.2" }
certified-vars = "0.1"
ic-kit = "0.4.8"
ic-cdk = "0.5"
candid = "0.7"
serde = "1.0.116"
serde_cbor = "0.11.2"
compile-time-run = "0.2.12"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
