[package]
name = "ic-history-router"
version = "0.1.0"
edition = "2018"
authors = ["Parsa Ghadimi <parsa@fleek.co>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-history-bucket = { path="../../bucket" }
ic-history-types = { path="../../types" }
ic-kit = "0.4.2"
ic-cdk = "0.3.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }
