[package]
name = "sdk-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cap-sdk = { path= "../../sdk" }
ic-kit = "0.4.3"
ic-cdk = "0.3.1"
serde = "1.0.116"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
