[package]
name = "cap-sdk-core"
version = "0.1.0-alpha1"
edition = "2018"

# license = "IDK"
description = "The core for Cap's SDK. This crate shouldn't be used for implementing support for cap, see cap-sdk instead."
homepage = "https://github.com/Psychedelic/cap"
repository = "https://github.com/Psychedelic/cap"
readme = "https://github.com/Psychedelic/cap/README.md"
documentation = "https://crates.io/cap_standards"


[dependencies]
ic-history-common = { path = "../../common" }
ic-kit = "*"
thiserror = "1"
serde = { version = "1", features = ["derive"] }