[package]
name = "cap-sdk"
version = "0.2.2"
edition = "2018"

# license = "IDK"
description = "An SDK for implementing Cap support within your IC canister."
homepage = "https://github.com/Psychedelic/cap"
repository = "https://github.com/Psychedelic/cap"
readme = "https://github.com/Psychedelic/cap/README.md"
documentation = "https://crates.io/cap_standards"

[dependencies]
cap-sdk-core = { path = "core" }
ic-kit = "0.4"
serde = "1.0.116"
ic-cdk = "0.5"
candid = "0.7"
futures = "0.3"
thiserror = "1"
async-stream = "0.3"
lazy_static = "1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }

[lib]
doctest = false
