[package]
name = "cap-standards"
version = "0.1.0-alpha1"
edition = "2018"

# license = "IDK"
description = "A collection of transaction standards that can be used with Cap."
homepage = "https://github.com/Psychedelic/cap"
repository = "https://github.com/Psychedelic/cap"
readme = "https://github.com/Psychedelic/cap/README.md"
documentation = "https://crates.io/cap_standards"

[features]
default = ["sdk-impls"]
sdk-impls = ["cap-sdk"]
alpha-xtc = []
alpha-dip721 = []
alpha-dip20 = ["num-bigint"]

[dependencies]
candid = "*"
serde = { version = "*", features = ["derive"] }
bincode = "*"
thiserror = "*"

[dependencies.cap-sdk]
path = "../"
optional = true

[dependencies.num-bigint]
version = "0.4"
optional = true