[package]
name = "cap-sdk-core"
version = "0.2.1"
edition = "2018"

# license = "IDK"
description = "The core for Cap's SDK. This crate shouldn't be used for implementing support for cap, see cap-sdk instead."
homepage = "https://github.com/Psychedelic/cap"
repository = "https://github.com/Psychedelic/cap"
documentation = "https://crates.io/cap_standards"


[dependencies]
cap-common = { path = "../../../common" }
ic-kit = "0.4"
ic-cdk = "0.5"
thiserror = "1"
serde = { version = "1", features = ["derive"] }